alignment fix

--- a/packages/modules/create-imodel/src/components/base-imodel/BaseIModel.scss
+++ b/packages/modules/create-imodel/src/components/base-imodel/BaseIModel.scss
@@ -6,6 +6,10 @@
  * Copyright (c) Bentley Systems, Incorporated. All rights reserved.
  * See LICENSE.md in the project root for license terms and full copyright notice.
  *--------------------------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------
+ * Copyright (c) Bentley Systems, Incorporated. All rights reserved.
+ * See LICENSE.md in the project root for license terms and full copyright notice.
+ *--------------------------------------------------------------------------------------------*/
  @import "~@itwin/itwinui-css/scss/variables";
  
  .iac-overlay-container { 
@@ -22,8 +26,6 @@
 }
 
 .iac-button-bar {
-  position: fixed;
-  bottom: 0;
   width: 100%;
   margin-bottom: $iui-xl;
   display: flex;
